# mera

./: .gitignore  CMakeLists.txt  README.adoc  meraConfig.cmake.in
.cmake/: common.cmake
demo/: CMakeLists.txt  cli.c  cli.h  ipc.h  json_rpc.c  json_rpc.h  main.c  main.h  spi.c  sram.c  trace.c  trace.h  uio.c
docs/: intro.adoc  introduction.adoc  licenses.adoc  mera.vsd  readme.adoc  rte-profinet-cases.graphml  rte_gen.adoc  rte_ib.adoc  rte_ob.adoc  sitemap.yaml  switch_core.adoc
docs/release-notes/: mera-2021.09.adoc  mera-2022.06.adoc
docs/resources/: api-doc.js
docs/scripts/: dg.rb
include/lan9662/: rte.h
include/lan9662/rte/: rte.h
include/microchip/ethernet/rte/: api.h
include/microchip/ethernet/rte/api/: main.h
scripts/: hdr_parser.rb  rpc-gen.rb
src/: lan9662_regs.h  lan9662_regs_sr.h  rte.c  rte_ib.c  rte_ob.c  rte_private.h
